--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url('../font/Roboto/roboto.css');
 @import url('../font/Montserrat/montserrat.css');
+@import url('../css/normalize.css');
 
 
 * {
