Adaptation for mobile devices, table optimization

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,13 +1,13 @@
 @import url('../font/Roboto/roboto.css');
 @import url('../font/Montserrat/montserrat.css');
 @import url('../css/normalize.css');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100&display=swap');
 
 * {
     font-family: 'Montserrat';
 }
 
-body{
+body {
     margin: 0;
 }
 
